--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>first_test</groupId>
     <artifactId>first_test</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
