add comment for annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 #spring.devtools.livereload.enabled=true
+#spring.autoconfigure.exclude=
 spring.devtools.restart.enabled=true
 spring.mvc.static-path-pattern=/resources/**
